--- a/homeStyle.css
+++ b/homeStyle.css
@@ -22,6 +22,11 @@ nav img {
     width: 150px
 }
 
+p{
+    font-size: 22px;
+    color: white;
+    text-align: center;
+}
 .nav-links {
     flex: 1;
     text-align: right;
@@ -55,4 +60,42 @@ nav img {
 
 .nav-links ul li:hover::after {
     width: 100%;
+}
+
+.numOne {
+    padding-top: 2%;
+    text-align: center;
+    color: white;
+}
+.numOne h1 {
+    font-size: 100px;
+    color: yellow;
+}
+
+.numTwo {
+    padding-left: 6%;
+    text-align: left;
+    color: white;
+}
+
+.numTwo h1 {
+    font-size: 75px;
+    color: silver;
+}
+.toggle-content {
+    display: none; /* Initially hidden */
+    padding: 10px;
+  }
+
+  .toggle-header {
+    cursor: pointer;
+    color: white;
+  }
+
+  .toggle-header:hover {
+    text-decoration: underline;
+  }
+  
+.numOne p {
+    padding-top: 0.5%;
 }
